--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,2 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-ca-certificates=2023.01.10=hecd8cb5_0
-certifi=2022.12.7=py39hecd8cb5_0
-libcxx=14.0.6=h9765a3e_0
-libffi=3.4.2=hecd8cb5_6
-ncurses=6.4=hcec6c5f_0
-openssl=1.1.1t=hca72f7f_0
-pip=23.0.1=py39hecd8cb5_0
-python=3.9.16=h218abb5_2
-readline=8.2=hca72f7f_0
-setuptools=65.6.3=py39hecd8cb5_0
-sqlite=3.41.1=h6c40b1e_0
-threadpoolctl=3.1.0=pypi_0
-tk=8.6.12=h5d9f67b_0
-tzdata=2022g=h04d1e81_0
-wheel=0.38.4=py39hecd8cb5_0
-xz=5.2.10=h6c40b1e_1
-zlib=1.2.13=h4dc903c_0
+certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_477u68wvzm/croot/certifi_1671487773341/work/certifi
+threadpoolctl==3.1.0
