--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_477u68wvzm/croot/certifi_1671487773341/work/certifi
-joblib==1.2.0
 numpy==1.24.2
-scikit-learn==1.2.2
-scipy==1.10.1
-threadpoolctl==3.1.0
+pandas==1.5.3
+python-dateutil==2.8.2
+pytz==2022.7.1
+six==1.16.0
